maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:33: error: Int does not take parameters
			sommeAngle() += 1
                                  ^Escaper:36: error: Int does not take parameters
			sommeAngle() -= 1
                                  ^Escaper:40: error: Int does not take parameters
			sommeAngle() -= 2
                                  ^